--- a/CE4021-Etivity1.ipynb
+++ b/CE4021-Etivity1.ipynb
@@ -276,21 +276,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Descrition of code:\n",
-    "    derivative_of_polynomial function take the poynomial representation of dict data type and applies derivatives using only power rule\n",
+    "Descrition of code:\n",
+    "-    derivative_of_polynomial function take the poynomial representation of dict data type and applies derivatives using only power rule\n",
     "    finally returns another polynomia which again dict data type\n",
-    "    evaluate_polynomial function take polynomial as dict and x as int , evalutes the expression and returns integer.\n",
+    "-    evaluate_polynomial function take polynomial as dict and x as int , evalutes the expression and returns integer.\n",
     "\n",
     "## Advantages :\n",
-    "    Using  dictionay data type to represent the poynomial function is better approach as we can keep both powers and coefficients are associated with each others.\n",
+    "-    Using  dictionay data type to represent the poynomial function is better approach as we can keep both powers and coefficients are associated with each others.\n",
+    "-    clean code and easy to understood\n",
+    "-    This code is tested using all possible cases\n",
     "\n",
     "## Disadvantages:\n",
-    "   There is no support complex polynomial\n",
-    "   No Exception handling \n",
+    "-  There is no support for complex polynomial\n",
+    "-  No Exception handling \n",
     "    but these are not in the scope\n",
     "\n",
     "## Peers work:\n",
-    "   I used peers work to understand the polynomial functions and derivatives as studied them 20 years back and understood the way how they are presenting in jypter notebook.\n",
+    "-   I used peers work to understand the polynomial functions and derivatives as studied them 20 years back and understood the way how they are presenting in jypter notebook.\n",
     "    "
    ]
   }
