Replace CE4021-Etivity1.ipynb

--- a/CE4021-Etivity1.ipynb
+++ b/CE4021-Etivity1.ipynb
@@ -80,6 +80,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#draft/unfinished \n",
+    "\n",
     "# Option 1: Symbolic calculation of the derivative\n",
     "#symbolically calculate the derivative of a polynomial with one variable.\n",
     "\n",
