rewrite Understanding Polynomial derivatives

--- a/CE4021-Etivity1.ipynb
+++ b/CE4021-Etivity1.ipynb
@@ -78,58 +78,51 @@
    "source": [
     "Showing excellent understanding of polynomial derivatives / integrals.\n",
     "\n",
-    "### Understanding Polynomial derivatives / integrals\n",
-    "\n",
-    "A polynomial in my own words is a mathematical formula consisting of variables (sometimes called indeterminates) and coefficients. Coefficients are known values and variables are unknown. These variables can have a power associated to it that is a positive integer (for example X^2).\n",
-    "\n",
-    "Example of a polynomial: $ y(x) = 3x^3 - 5x^2 + 2x - 1 $\n",
-    "\n",
-    "note: a polynomial can have any number of coefficients and variables, the variables can have any order of power that is a positive integer.\n",
+    "### Understanding Polynomial derivatives\n",
     "\n",
     "#### What are polynomials?\n",
     "\n",
-    "They are equations that can be used to describe linear processes. I always find I understand things when I have a real life example. A great example of a polynomial in the real world is a ball being fired directly up into the air, also known as the \"equation for vertical motion\". For the sake of this exercise we will fire our ball within a vacuum (i.e. it is not effected by air currents, wind resistance etc). The following formula is a polynomial that represents the vertical height as a function of time ($ y(t) $) with respect to the initial velocity in the y direction ($ V_{iy} $) and time ($ t $). For this example we will consider acceleration due to gravity ($ g $) a constant at 9.8 as we are not shooting our ball into space (unfortunately).\n",
+    "A polynomial is a mathematical equation consisting of variables and coefficients. A polynomial can have any number of coefficients and variables, and the variables can have any order of power that is a positive integer.\n",
     "\n",
-    "$$ y(t) = V_{iy}t - \\frac{1}{2}gt^2 $$\n",
+    "Example of a polynomial: $ y(x) = 3x^3 - 5x^2 + 2x - 1 $\n",
     "\n",
-    "(TODO: Maybe a graph or some visual representation somewhere here)\n",
+    "##### Equation for Vertical Motion\n",
     "\n",
-    "All this formula is doing is giving you the height above ground (y), at a particular time (t), after being thrown/launched with an initial velocity (v), directly up into the air. For the proper physics nerds they know that g is acceleration due to gravity and is normally taken to 9.81 m/s^2.\n",
+    "![Vertical height vs. time taken](https://i.stack.imgur.com/nrp41.png)\n",
     "\n",
-    "For example lets say I launch a ball directly up into the air from a canon (and for simplicity lets say this canon is at ground level). If I know the exact velocity it leaves the ground at I can work out what it's height (y) is above ground for a given time (t).\n",
+    "Polynomials are equations that can be used to describe linear processes is one that represents a ball being fired directly up into the air, also known as the \"equation for vertical motion\". For the sake of this example we will fire our ball within a vacuum (i.e. it is not effected by air currents, wind resistance etc). The following equation is a polynomial that represents the vertical displacement ($ h $) as a function of time ($ t $) with respect to the initial velocity ($ V_{iy} $), and acceleration/deceleration due to gravity ($ g $).\n",
     "\n",
-    "This is an example of a polynomial in action.\n",
+    "$$ h(t) = V_{iy}t - \\frac{1}{2}gt^2 $$\n",
     "\n",
-    "#### So what are derivatives and how do I use them?\n",
+    "#### Differentiation of a polynomial\n",
     "\n",
-    "Well lets stick with our example. What if I wanted to find the velocity of the ball ($ V_{y} $) for a given time ($ t $)? Well the velocity can be calculated as the change in displacement ($ ds $) divided by the change in time ($ dt $) or $ \\frac{ds}{dt} $.\n",
+    "What if I wanted to find the velocity of the ball ($ V_{y} $) at a time ($ t $)? Well the velocity can be calculated as the change in displacement ($ ds $) divided by the change in time ($ dt $) or $ \\frac{ds}{dt} $ \n",
     "\n",
-    "$$ \\frac{change~in~displacement}{change~in~time} = \\frac{ds}{dt} $$\n",
+    "$$ \\frac{change~in~displacement}{change~in~time} = \\frac{ds}{dt} = velocity $$\n",
     "\n",
     "The derivative is defined as 'an instantaneous rate of change' which, as pointed out in the [video by 3Blue1Brown on the topic](https://youtu.be/9vKqVkMQHKk?si=QGEQitIiNg3zORRg&t=30s), is an oxymoron. \"Change is something that happens between separate points in time, and when you blind yourself to all but a single instant, there is no more room for change.\" For example if you wanted to get the velocity at 3 minutes (at an instant in time) and the velocity requires a change in time to calculate it then it really doesn't make sense at face value.\n",
     "\n",
-    "So like in 3Blue1Brown lets take out the ambiguity and use an actual small value of time for our $ dt $. Let's say these 'instants in time' are actually small time periods of 0.01s. So our change in displacement is the displacement at time $ t + dt $ minus the displacement at time $ t $. Or in terms of of what we know so far (and replacing $ y(t) $ for $ s(t) $):\n",
-    "(TODO: change all references of y(t) to s(t) to avoid confusion)\n",
+    "$ dt $ is an increment of time that approaches zero ($ {dt \\to 0} $). To find the velocity at dt we get the distance at time $ t + dt $, subtract the distance at $ t $, and divide by the time $ dt $. \n",
     "\n",
-    "$$ \\frac{ds}{dt} = \\frac{s(t + dt) - s(t)}{dt} $$\n",
+    "TODO: Add image showing dt change\n",
     "\n",
-    "$$ \\frac{ds}{dt} = \\frac{(V_{iy}(t + dt) - \\frac{1}{2}g(t + dt)^2) - (V_{iy}t - \\frac{1}{2}gt^2)}{dt} $$\n",
+    "$$ \\frac{dh}{dt} = \\frac{h(t + dt) - h(t)}{dt} $$\n",
     "\n",
-    "$$ \\frac{ds}{dt} = \\frac{V_{iy}(t) + V_{iy}(dt) - \\frac{1}{2}gt^2 - \\frac{1}{2}g(dt)^2 - g(t)(dt) - V_{iy}(t) + \\frac{1}{2}gt^2}{dt} $$\n",
+    "$$ \\frac{dh}{dt} = \\frac{(V_{iy}(t + dt) - \\frac{1}{2}g(t + dt)^2) - (V_{iy}t - \\frac{1}{2}gt^2)}{dt} $$\n",
     "\n",
-    "$$ \\frac{ds}{dt} = \\frac{(V_{iy}(dt) - \\frac{1}{2}g(dt)^2 - g(t)(dt)}{dt} $$\n",
+    "$$ \\frac{dh}{dt} = \\frac{V_{iy}(t) + V_{iy}(dt) - \\frac{1}{2}gt^2 - \\frac{1}{2}g(dt)^2 - g(t)(dt) - V_{iy}(t) + \\frac{1}{2}gt^2}{dt} $$\n",
     "\n",
-    "$$ \\frac{ds}{dt} = V_{iy} - \\frac{1}{2}g(dt) - g(t)(dt) $$\n",
+    "$$ \\frac{dh}{dt} = \\frac{(V_{iy}(dt) - \\frac{1}{2}g(dt)^2 - g(t)(dt)}{dt} $$\n",
     "\n",
-    "Being instantaneous is the same as saying as approaching zero so it is as dt approaches zero ($ {dt \\to 0} $)\n",
+    "$$ \\frac{dh}{dt} = V_{iy} - \\frac{1}{2}g(dt) - g(t) $$\n",
     "\n",
-    "So the middle term approaches zero.\n",
+    "As $ {dt \\to 0} $ the middle term approaches zero.\n",
     "\n",
-    "$$ \\frac{ds}{dt} = V_{iy} - g(t)(dt) $$\n",
+    "$$ \\frac{dh}{dt} = V_{iy} - g(t) $$\n",
     "\n",
-    "So with the above equation we can work out the 'instantaneous velocity'.\n",
+    "With the above equation we can work out the 'instantaneous velocity'.\n",
     "\n",
-    "(TODO: Graph showing time on the x axis where it is marked at t and marked at dt)\n",
+    "(TODO: Graph showing distance and speed together and how they are related)\n",
     "\n"
    ]
   },
