separate functions and name vars

--- a/CE4021-Etivity1.ipynb
+++ b/CE4021-Etivity1.ipynb
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -150,30 +150,32 @@
     }
    ],
    "source": [
-    "# TODOs: better naming of variables\n",
     "# Maybe spread each step out so process is more clear\n",
-    "# Make better TODO list\n",
     "x = [[1, 2], [3, 4], [7, 8]]\n",
     "\n",
-    "def polynomial_differentiation(input_list, known_var=False):\n",
+    "def polynomial_differentiation(input_list):\n",
     "\n",
-    "    output_equation = []\n",
+    "    output_polynomial = []\n",
     "\n",
-    "    for a, b in input_list:\n",
-    "        output_equation.append([a * b, b - 1])\n",
+    "    for coefficient, var_power in input_list:\n",
+    "        output_polynomial.append([coefficient * var_power, var_power - 1])\n",
+    "\n",
+    "    return(output_polynomial)\n",
+    "\n",
+    "def evaluate_polynomial(input_list, known_var):\n",
+    "\n",
+    "    output_poly = polynomial_differentiation(input_list)\n",
     "\n",
     "    sum = 0\n",
     "    if known_var:\n",
-    "        for coefficient, power in output_equation:\n",
+    "        for coefficient, power in output_poly:\n",
     "            sum += (known_var**power)*coefficient\n",
     "\n",
-    "        return sum\n",
-    "\n",
-    "    return(output_equation)\n",
+    "    return sum\n",
     "        \n",
     "\n",
     "print(polynomial_differentiation(x))\n",
-    "print(polynomial_differentiation(x, 5))"
+    "print(evaluate_polynomial(x, 5))"
    ]
   },
   {
