Adding the power rule explanation

--- a/CE4021-Etivity1.ipynb
+++ b/CE4021-Etivity1.ipynb
@@ -92,7 +92,9 @@
     "\n",
     "Polynomials are equations that can be used to describe linear processes is one that represents a ball being fired directly up into the air, also known as the \"equation for vertical motion\". For the sake of this example we will fire our ball within a vacuum (i.e. it is not effected by air currents, wind resistance etc). The following equation is a polynomial that represents the vertical displacement ($ h $) as a function of time ($ t $) with respect to the initial velocity ($ V_{iy} $), and acceleration/deceleration due to gravity ($ g $).\n",
     "\n",
-    "$$ h(t) = V_{iy}t - \\frac{1}{2}gt^2 $$\n",
+    "\\begin{equation}\n",
+    "    h(t) = V_{iy}t - \\frac{1}{2}gt^2\n",
+    "\\end{equation}\n",
     "\n",
     "#### Differentiation of a polynomial\n",
     "\n",
@@ -106,23 +108,62 @@
     "\n",
     "TODO: Add image showing dt change\n",
     "\n",
-    "$$ \\frac{dh}{dt} = \\frac{h(t + dt) - h(t)}{dt} $$\n",
+    "\\begin{equation}\n",
+    "    \\frac{dh}{dt} = \\frac{h(t + dt) - h(t)}{dt}\n",
+    "    \\tag{2}\n",
+    "\\end{equation}\n",
     "\n",
-    "$$ \\frac{dh}{dt} = \\frac{(V_{iy}(t + dt) - \\frac{1}{2}g(t + dt)^2) - (V_{iy}t - \\frac{1}{2}gt^2)}{dt} $$\n",
+    "\\begin{equation}\n",
+    "    \\frac{dh}{dt} = \\frac{(V_{iy}(t + dt) - \\frac{1}{2}g(t + dt)^2) - (V_{iy}t - \\frac{1}{2}gt^2)}{dt}\n",
+    "    \\tag{3}\n",
+    "\\end{equation}\n",
     "\n",
-    "$$ \\frac{dh}{dt} = \\frac{V_{iy}(t) + V_{iy}(dt) - \\frac{1}{2}gt^2 - \\frac{1}{2}g(dt)^2 - g(t)(dt) - V_{iy}(t) + \\frac{1}{2}gt^2}{dt} $$\n",
+    "\\begin{equation}\n",
+    "    \\frac{dh}{dt} = \\frac{V_{iy}(t) + V_{iy}(dt) - \\frac{1}{2}gt^2 - \\frac{1}{2}g(dt)^2 - g(t)(dt) - V_{iy}(t) + \\frac{1}{2}gt^2}{dt}\n",
+    "    \\tag{4}\n",
+    "\\end{equation}\n",
     "\n",
-    "$$ \\frac{dh}{dt} = \\frac{(V_{iy}(dt) - \\frac{1}{2}g(dt)^2 - g(t)(dt)}{dt} $$\n",
+    "\\begin{equation}\n",
+    "    \\frac{dh}{dt} = \\frac{(V_{iy}(dt) - \\frac{1}{2}g(dt)^2 - g(t)(dt)}{dt}\n",
+    "    \\tag{5}\n",
+    "\\end{equation}\n",
     "\n",
-    "$$ \\frac{dh}{dt} = V_{iy} - \\frac{1}{2}g(dt) - g(t) $$\n",
+    "\\begin{equation}\n",
+    "    \\frac{dh}{dt} = V_{iy} - \\frac{1}{2}g(dt) - g(t)\n",
+    "    \\tag{6}\n",
+    "\\end{equation}\n",
+    "\n",
     "\n",
     "As $ {dt \\to 0} $ the middle term approaches zero.\n",
     "\n",
-    "$$ \\frac{dh}{dt} = V_{iy} - g(t) $$\n",
+    "\n",
+    "\\begin{equation}\n",
+    "    \\frac{dh}{dt} = V_{iy} - g(t)\n",
+    "    \\tag{7}\n",
+    "\\end{equation}\n",
     "\n",
     "With the above equation we can work out the 'instantaneous velocity'.\n",
     "\n",
+    "There is a rule for this type of differentiation named the power rule. Taking the positive integer power of the variable, multiplying that by the whole term and then taking 1 from that power:\n",
+    "\n",
+    "\\begin{equation}\n",
+    "    \\frac{d}{dx}(ax^n) = anx^{n-1}\n",
+    "    \\tag{The Power Rule}\n",
+    "\\end{equation}\n",
+    "\n",
+    "You will note that if applied to equation 1 it can produce equation 7 with one or two easy steps. Applying the power rule to differentiate each term of the equation for vertical motion:\n",
+    "\n",
+    "$$ \\frac{dh}{dt} = (1)V_{iy}t^{1-1} - (2)\\frac{1}{2}gt^{2-1} $$\n",
+    "\n",
+    "And simplifying we get equation 7 that calculates velocity:\n",
+    "\n",
+    "$$ \\frac{dh}{dt} = V_{iy} - g(t) $$\n",
+    "\n",
+    "This rule is what is used to calculate the derivatives in the *polynomial_differentiation* method below.\n",
+    "\n",
     "(TODO: Graph showing distance and speed together and how they are related)\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
