Replace CE4021-Etivity1.ipynb

--- a/CE4021-Etivity1.ipynb
+++ b/CE4021-Etivity1.ipynb
@@ -112,9 +112,10 @@
     "x = 3 \n",
     "\n",
     "def evaluate(x):\n",
-    "   \n",
+    "    if x == 3:\n",
     "     return 5 * x - 3 * x + 2\n",
-    "\n",
+    "    else:\n",
+    "     return \"error\"\n",
     " "
    ]
   },
@@ -150,16 +151,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "I explained the code with comments and I guess the advantages are that the code is consice and clear i feel.\n",
+    "I explained the code with comments and I guess the advantages are that the code is concise and clear I feel.\n",
     "It is simple and the disadvantages I feel the fact that I was not sure at least without spending more time to research\n",
-    "how and if i'ts possibe . I think it's possible to pass several variables in the argument of the function. So I could have\n",
-    "passed the 3 examples variables such as def derivative(polynomial1, polynomial2, polynomial3): but then i would have to do 3 for loops \n",
-    "and i think we can only return once a function. I guess I think I would need to create 3 separate functions to calculate the \n",
+    "how and if it's possible . I think it's possible to pass several variables in the argument of the function. So I could have\n",
+    "passed the 3 examples variables such as def derivative(polynomial1, polynomial2, polynomial3): but then I would have to do 3 for loops \n",
+    "and I think we can only return once a function. I guess I think I would need to create 3 separate functions to calculate the \n",
     "derivative of each example. \n",
     "\n",
     "For the evaluate function , I think it's simple but maybe I could have used a for loop . I think it depends \n",
     "if for the purpose of the task we just define the variable, I guess it's ok to calculate the way I did it but with user\n",
-    "input we could use a for loop.\n",
+    "input we could use a for loop. I used a conditional statement inside and I feel it's useless but I wanted to show my \n",
+    "understanding of the if/else statement. I can make more complex if else statements and loop through arrays and do calculations \n",
+    "with the elements[i] , well i guess basic calculations just like in the videos material incliding with the modulus operator to find \n",
+    "odd and even numbers too.\n",
+    "\n",
+    "I have not checked anyone's code and just came up with this but I will compare my approach to my peers \n",
+    "approaches after checking the posts. \n",
     "\n"
    ]
   }
