--- a/CE4021-Etivity1.ipynb
+++ b/CE4021-Etivity1.ipynb
@@ -161,10 +161,7 @@
     "\n",
     "This rule is what is used to calculate the derivatives in the *polynomial_differentiation* method below.\n",
     "\n",
-    "(TODO: Graph showing distance and speed together and how they are related)\n",
-    "\n",
-    "\n",
-    "\n"
+    "(TODO: Graph showing distance and speed together and how they are related)"
    ]
   },
   {
@@ -178,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -192,27 +189,77 @@
    ],
    "source": [
     "# Maybe spread each step out so process is more clear\n",
-    "x = [[1, 2], [3, 4], [7, 8]]\n",
+    "x = ((1, 2), (3, 4), (7, 8))\n",
+    "y = [[1, 2], [3, 4], [7, 8]]\n",
     "\n",
-    "def polynomial_differentiation(input_list):\n",
+    "def polynomial_differentiation(input_polynomial):\n",
+    "    \"\"\"\n",
+    "    Calculates the derivative of a polynomial using the power rule.\n",
     "\n",
+    "    Args:\n",
+    "        input_polynomial (list or tuple): List (or tuple) containing lists (or tuples) with two values.\n",
+    "                                            These two values represent the coefficient and variable power\n",
+    "                                            of each term of the polynomial. (e.g. 2x^5 + 8x^4 would be \n",
+    "                                            represented by [[2 ,5], [8, 4]] or ((2, 5), (8, 4)) )\n",
+    "\n",
+    "    Returns:\n",
+    "        list: Returns a list of lists that represent the polynomial after differentiation. [[5, 6], [5, 5]]\n",
+    "                is the polynomial 5x^6 + 5x^5\n",
+    "\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Empty list that will contain the output polynomial\n",
     "    output_polynomial = []\n",
     "\n",
-    "    for coefficient, var_power in input_list:\n",
-    "        output_polynomial.append([coefficient * var_power, var_power - 1])\n",
+    "    # for each term of the polynomial use the coefficient and the power of the variable\n",
+    "    for coefficient, var_power in input_polynomial:\n",
+    "        # Check to see if input is a polynomial\n",
+    "        if var_power<0:\n",
+    "            print(\"Input formula contains negative power for a variable. Input needs to be a polynomial.\")\n",
+    "            return\n",
+    "        # if either the coefficient or the power are zero the term is zero so pass\n",
+    "        if coefficient == 0 or var_power == 0:\n",
+    "            pass\n",
+    "        # Apply the power rule to the term of the polynomial and add to output_polynomial list\n",
+    "        else:\n",
+    "            output_polynomial.append([coefficient * var_power, var_power - 1])\n",
     "\n",
+    "    # Return the polynomial after differentiation\n",
     "    return(output_polynomial)\n",
     "\n",
-    "def evaluate_polynomial(input_list, known_var):\n",
     "\n",
-    "    output_poly = polynomial_differentiation(input_list)\n",
+    "def evaluate_polynomial(input_polynomial, known_var):\n",
+    "    \"\"\"\n",
+    "    Evaluates the polynomial after differentiation for a known variable\n",
     "\n",
-    "    sum = 0\n",
-    "    if known_var:\n",
-    "        for coefficient, power in output_poly:\n",
-    "            sum += (known_var**power)*coefficient\n",
+    "    Args:\n",
+    "        input_polynomial (list or tuple): List (or tuple) containing lists (or tuples) with two values.\n",
+    "                                            These two values represent the coefficient and variable power\n",
+    "                                            of each term of the polynomial. (e.g. 2x^5 + 8x^4 would be \n",
+    "                                            represented by [[2 ,5], [8, 4]] or ((2, 5), (8, 4)) )\n",
+    "        known_var (int or float): number (int or float) that is the know variable of the polynomial\n",
     "\n",
-    "    return sum\n",
+    "    Returns:\n",
+    "        int or float: The final value of the differentiated input_polynomial by inputting the known_var\n",
+    "                        into the output polynomial.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Apply polynomial_differentiation on the input polynomial\n",
+    "    differentiated_polynomial = polynomial_differentiation(input_polynomial)\n",
+    "\n",
+    "    # var to hold the addition of each term of the differentiated polynomial to produce a scalar\n",
+    "    scalar = 0\n",
+    "    # check to see if input is a number\n",
+    "    if isinstance(known_var, (int, float)):\n",
+    "        # Use the input variable to calculate the term and add it to make up the scalar\n",
+    "        for coefficient, power in differentiated_polynomial:\n",
+    "            scalar += (known_var**power)*coefficient\n",
+    "    # if not a number provide feedback and end it\n",
+    "    else:\n",
+    "        print(f\"Float or int needed for calculation {type(known_var)} used.\")\n",
+    "        return\n",
+    "\n",
+    "    return scalar\n",
     "        \n",
     "\n",
     "print(polynomial_differentiation(x))\n",
