Replace CE4021-Etivity1.ipynb

--- a/CE4021-Etivity1.ipynb
+++ b/CE4021-Etivity1.ipynb
@@ -98,14 +98,16 @@
     "# I create an array/list named 'res' to store the result so the derivative .\n",
     "# I read the polynomial which is a list with a for loop until the end of the list using the 'i' as index.\n",
     "# I append the calculation of the derivative to the 'res' list.\n",
-    "# I print the result of the calculation by returning the variable 'res' \n",
+    "# I return the result of the calculation by returning the variable 'res'\n",
+    "# I print the result by calling the function \n",
     "\n",
     "def derivative(polynomial1):\n",
     "        res=[]\n",
-    "        for i in range(len(polynomial1)-1):\n",
-    "            res.append((len(polynomial1)-i-1)*polynomial1[i])\n",
+    "        for i in range(1, len(polynomial1)):\n",
+    "            res.append(polynomial1[i] * i)\n",
     "        return res\n",
     "\n",
+    "print(derivative(polynomial1))\n",
     "\n",
     "#evaluate a polynomial with a given value for its variable (x in this case) \n",
     "\n",
@@ -116,6 +118,8 @@
     "     return 5 * x - 3 * x + 2\n",
     "    else:\n",
     "     return \"error\"\n",
+    "     \n",
+    "print(evaluate(x))\n",
     " "
    ]
   },
@@ -166,7 +170,8 @@
     "odd and even numbers too.\n",
     "\n",
     "I have not checked anyone's code and just came up with this but I will compare my approach to my peers \n",
-    "approaches after checking the posts. \n",
+    "approaches after checking the posts. I have tried to run my code and it doesn't run due to indent issues and I will be\n",
+    "fixing it later.\n",
     "\n"
    ]
   }
